nullaway_error_48a69cfb-99f6-4f90-a8cc-26bc9f993f09.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/MapObject.java:376: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return this.layer;
    ^
    (see http://t.uber.com/nullaway )
